--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^5.2.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "react-spinners": "^0.4.5",
     "validator": "^10.5.0"
   },
   "devDependencies": {
